fix java versions