@@ -24,7 +24,7 @@ COPY magics  /magics
 ARG VERSION
 
 # Install java dev tools with sdkman  
-#     latest java jdk LTS (ENV=stable) or the latest jdk (ENV="")
+#     latest java jdk LTS, the latest jdk, and early access
 #     stable mvn 3
 RUN --mount=type=cache,target=/opt/sdkmanArchives/,sharing=locked \
     echo -e "\e[93m**** Installs SDKMan, JDK and Maven ****\e[38;5;241m" && \
@@ -33,25 +33,68 @@ RUN --mount=type=cache,target=/opt/sdkmanArchives/,sharing=locked \
     ln -s /opt/sdkmanArchives/ /home/jovyan/.sdkman/archives/ && \
     echo "sdkman_auto_answer=true" > ${HOME}/.sdkman/etc/config && \
 	source "$HOME/.sdkman/bin/sdkman-init.sh" && \
+	java_lts=$(sdk list java|grep default| grep -o "[^ ]*$"|tr -d ':') && \
+	# Installs all LTSs, early access JDK and latest maven
 	if [[ "$ENV" = "stable" ]] ; then \
 		sdk install java ;\
 	else \
-	 	sdk install java $(sdk list java|grep tem|head -n 1|cut -d '|' -f 6) ;\
-		sdk install java ;\
+		# install Java 8
+	    sdk install java $(sdk list java|grep "8\..*fx-zulu"|head -n 1|cut -d '|' -f 6)  && \ 
+		# install Java Early Access
+		sdk install java $(sdk list java|grep "\.ea\..*-open"|head -1|cut -d '|' -f 6) && \ 
+		# Install LTSs and Latest
+		for v in $(sdk list java|\
+				tr -s ' '|grep ' tem '|cut -d '|' -f 6|tr -d ' '| \
+				sed 's/\(^[^\.-]*\)\(.*\)$/\1,\1\2/'|\
+				sort -u -t, -k 1,1|cut -f 2 -d,); do \
+			sdk install java "$v"; \
+		done ;\
+		GRAAL_VERSION=$(sdk list java|tr -d ' '|grep '\-graal$'|grep -v "\.ea\."|cut -d '|' -f 6|head -n 1) && \
+		sdk install java "$GRAAL_VERSION" && \ 
+		sdk default java "$java_lts";\
 	fi && \
-	sdk install maven && \
+	sdk install maven
+
 	# Set maven repository to persistent user space
+RUN  --mount=type=cache,target=/opt/sdkmanArchives/,sharing=locked \
+	source "$HOME/.sdkman/bin/sdkman-init.sh" && \
 	echo \
     "<settings xmlns='http://maven.apache.org/SETTINGS/1.2.0' \
       		   xmlns:xsi='http://www.w3.org/2001/XMLSchema-instance' \
     		   xsi:schemaLocation='http://maven.apache.org/SETTINGS/1.2.0 https://maven.apache.org/xsd/settings-1.2.0.xsd'> \
         <localRepository>\${user.home}/work/.m2/repository</localRepository> \
-    </settings>" \
+		<interactiveMode>false</interactiveMode> \
+		<mirrors> \    
+ 			<mirror> \
+  				<id>compute-lsis-2</id> \
+  				<mirrorOf>central</mirrorOf> \
+  				<url>https://nexus.ebruno.fr/repository/maven-central</url> \
+ 			</mirror> \
+		</mirrors> \
+		<profiles> \
+		  <profile> \
+  			<id>myprofile</id> \
+ 			<activation> \
+  				<activeByDefault>true</activeByDefault> \
+ 			</activation> \
+			<properties> \
+				<style.color>never</style.color>\
+			</properties> \
+  			<repositories> \
+    			<repository> \
+      				<id>MavenCentral</id> \
+       				<name>Central but with another name to bypass proxy unavailable</name> \
+       				<url>https://repo1.maven.org/maven2</url> \ 
+    			</repository> \
+  			</repositories> \ 
+		 </profile> \
+		</profiles> \
+		</settings>" \
     	> ${HOME}/.sdkman/candidates/maven/current/conf/settings.xml && \
 	# add sdkman config to .zshrc
- 	echo '#THIS MUST BE AT THE END OF THE FILE FOR SDKMAN TO WORK!!!' >> $HOME/.zshenv && \
-    echo 'export SDKMAN_DIR="$HOME/.sdkman"' >> $HOME/.zshenv && \
-    echo '[[ -s "$HOME/.sdkman/bin/sdkman-init.sh" ]] && source "$HOME/.sdkman/bin/sdkman-init.sh"' >> $HOME/.zshenv && \
+ 	echo '#THIS MUST BE AT THE END OF THE FILE FOR SDKMAN TO WORK!!!' >> "$HOME"/.zshenv && \
+    echo 'export SDKMAN_DIR="$HOME/.sdkman"' >> "$HOME"/.zshenv && \
+    echo '[[ -s "$HOME/.sdkman/bin/sdkman-init.sh" ]] && source "$HOME/.sdkman/bin/sdkman-init.sh"' >> "$HOME"/.zshenv && \
 	# sdk flush && \
 	groupadd sdk && \
 	chgrp -R sdk ${SDKMAN_DIR} &&\
@@ -75,18 +118,6 @@ RUN echo -e "\e[93m**** Install lombok and java dependencies ***\e[38;5;241m" &&
         mkdir -p "${HOME}/lib/" && \
         curl -sL https://projectlombok.org/downloads/lombok.jar -o "${HOME}/lib/lombok.jar"
 COPY dependencies/* "$HOME/lib/"
-
-RUN quarto add martinomagnifico/quarto-verticator --no-prompt && \
-	quarto add quarto-ext/include-code-files --no-prompt && \
-	quarto install extension schochastics/academicons --no-prompt && \
-	quarto add mcanouil/quarto-iconify --no-prompt && \
-	quarto install extension schochastics/quarto-nutshell --no-prompt && \
-	quarto install extension jjallaire/code-visibility --no-prompt && \
-	quarto add shafayetShafee/line-highlight --no-prompt && \
-	quarto add mcanouil/quarto-lua-env --no-prompt && \
-	quarto add shafayetShafee/hide-comment --no-prompt && \
-	quarto install extension EmilHvitfeldt/quarto-roughnotation --no-prompt && \
-	quarto add shafayetShafee/code-fullscreen --no-prompt 
 
 RUN conda install --yes -c jetbrains kotlin-jupyter-kernel
 
@@ -122,11 +153,11 @@ ARG ENV
 # Codeserver extensions to install
 COPY Artefacts/codeserver_extensions /tmp/
 
-RUN cd $(dirname $(readlink $(type code-server))) && \
-	rm -rf node_modules/argon2 \
-	&& npm install -g node-gyp \
-	&& npm install argon2 argon2-cli \
-	&& npx argon2-cli -d -e
+#RUN cd $(dirname $(readlink $(type code-server))) && \
+#	rm -rf node_modules/argon2 \
+#	&& npm install -g node-gyp \
+#	&& npm install argon2 argon2-cli \
+#	&& npx argon2-cli -d -e
 
 RUN if [[ "$ENV" != "minimal" ]] ; then \
 		echo -e "\e[93m**** Installs Code Server Extensions ****\e[38;5;241m" && \
@@ -141,45 +172,55 @@ RUN if [[ "$ENV" != "minimal" ]] ; then \
 
 # Install a Java Kernel for Jupyter
 ADD https://bruno.univ-tln.fr/ijava-latest.zip /tmp/ijava-kernel.zip
-RUN --mount=type=cache,target=/opt/sdkmanArchives/ --mount=type=cache,target=/var/cache/buildkit/pip,sharing=locked \
-	echo -e "\e[93m**** Install Java Kernel for Jupyter ****\e[38;5;241m" && \
-        #curl -sL https://github.com/SpencerPark/IJava/releases/download/v1.3.0/ijava-1.3.0.zip -o /tmp/ijava-kernel.zip && \
-        unzip /tmp/ijava-kernel.zip -d /tmp/ijava-kernel && \
-        cd /tmp/ijava-kernel && \
-		conda create -y --name java-lts && \
-		/bin/bash -c "source activate java-lts" && \
-		python3 install.py --sys-prefix && \
-        cd && rm -rf /tmp/ijava-kernel /tmp/ijava-kernel.zip && \
-		cp --archive /opt/conda/share/jupyter/kernels/java /opt/conda/share/jupyter/kernels/java-lts && \
-		mv /opt/conda/share/jupyter/kernels/java /opt/conda/share/jupyter/kernels/java-latest && \
-    fix-permissions ${CONDA_DIR} && \
-    fix-permissions /home/${NB_USER}
-
 # Enable Java Annotations and Preview and personnal magics. Sets classpath.
 COPY patch_java_kernel.sh /tmp/patch_java_kernel.sh
 COPY kernel.json /opt/conda/share/jupyter/kernels/java-latest/kernel.json
 ENV IJAVA_CLASSPATH="${HOME}/lib/*.jar:/usr/local/bin/*.jar"
 ENV IJAVA_STARTUP_SCRIPTS_PATH="/magics/*"
-RUN	JAVA_VERSION=$(sdk list java|tr -s ' '|grep -e '-tem' |grep "installed"|cut -d '|' -f 3|sort|tail -n 1|sed 's/ //g') && \
-	/tmp/patch_java_kernel.sh ${JAVA_VERSION} java-latest	
-#    JAVA_MAJOR_VERSION=$(echo "$JAVA_VERSION"|sed 's/ //g'|sed 's/^\([0-9]*\).*/\1/') && \
-#	DYNENV="\"env\": {\"JAVA_HOME\":\"\/home\/jovyan\/.sdkman\/candidates\/java\/$JAVA_VERSION-tem\",\"PATH\":\"\/home\/jovyan\/.sdkman\/candidates\/java\/$JAVA_VERSION-tem\/bin:\$PATH\",\"JAVA_OPTS\":\"--enable-preview\",\"IJAVA_COMPILER_OPTS\":\"-deprecation -Xlint:preview -XprintProcessorInfo -XprintRounds --enable-preview --release ${JAVA_MAJOR_VERSION} --add-exports=jdk.compiler\/com.sun.tools.javac.processing=ALL-UNNAMED\"}" && \
-#	IKERNEL_JAR=$(ls /opt/conda/share/jupyter/kernels/java-latest/IJava*.jar| sed 's/\//\\\//g') && \
-#	sed -i s/ENV/"$DYNENV"/ /opt/conda/share/jupyter/kernels/java-latest/kernel.json && \
-#	sed -i s/Java/"Java Latest"/ /opt/conda/share/jupyter/kernels/java-latest/kernel.json && \
-#	sed -i s/IKERNEL_JAR/"$IKERNEL_JAR"/ /opt/conda/share/jupyter/kernels/java-latest/kernel.json
-
-COPY kernel.json /opt/conda/share/jupyter/kernels/java-lts/kernel.json
-ENV IJAVA_CLASSPATH="${HOME}/lib/*.jar:/usr/local/bin/*.jar"
-ENV IJAVA_STARTUP_SCRIPTS_PATH="/magics/*"
-RUN JAVA_VERSION=$(sdk list java|tr -s ' '|grep -e '-tem' |grep "installed"|cut -d '|' -f 3|sort|head -n 1|sed 's/ //g') && \
-	/tmp/patch_java_kernel.sh ${JAVA_VERSION} java-lts	
- #   JAVA_MAJOR_VERSION=$(echo "$JAVA_VERSION"|sed 's/ //g'|sed 's/^\([0-9]*\).*/\1/') && \
-	#DYNENV="\"env\": {\"JAVA_HOME\":\"\/home\/jovyan\/.sdkman\/candidates\/java\/$JAVA_VERSION-tem\",\"PATH\":\"\/home\/jovyan\/.sdkman\/candidates\/java\/$JAVA_VERSION-tem\/bin:\$PATH\",\"JAVA_OPTS\":\"--enable-preview\",\"IJAVA_COMPILER_OPTS\":\"-deprecation -Xlint:preview -XprintProcessorInfo -XprintRounds --enable-preview --release ${JAVA_MAJOR_VERSION} --add-exports=jdk.compiler\/com.sun.tools.javac.processing=ALL-UNNAMED\"}" && \
-	#IKERNEL_JAR=$(ls /opt/conda/share/jupyter/kernels/java-lts/IJava*.jar| sed 's/\//\\\//g') && \
-	#sed -i s/ENV/"$DYNENV"/ /opt/conda/share/jupyter/kernels/java-lts/kernel.json && \
-	#sed -i s/Java/"Java LTS"/ //opt/conda/share/jupyter/kernels/java-lts/kernel.json && \
-	#sed -i s/IKERNEL_JAR/"$IKERNEL_JAR"/ /opt/conda/share/jupyter/kernels/java-lts/kernel.json
+RUN --mount=type=cache,target=/opt/sdkmanArchives/ --mount=type=cache,target=/var/cache/buildkit/pip,sharing=locked \
+	echo -e "\e[93m**** Install Java Kernel for Jupyter ****\e[38;5;241m" && \
+    #curl -sL https://github.com/SpencerPark/IJava/releases/download/v1.3.0/ijava-1.3.0.zip -o /tmp/ijava-kernel.zip && \
+	echo ok5 && \
+    unzip /tmp/ijava-kernel.zip -d /tmp/ijava-kernel && \
+    cd /tmp/ijava-kernel && \
+	# conda create -y --name java-lts && \
+	# /bin/bash -c "source activate java-lts" && \
+	python3 install.py --sys-prefix && \
+    cd && rm -rf /tmp/ijava-kernel /tmp/ijava-kernel.zip && \
+	cp --archive /opt/conda/share/jupyter/kernels/java /opt/conda/share/jupyter/kernels/java-lts && \
+	cp --archive /opt/conda/share/jupyter/kernels/java /opt/conda/share/jupyter/kernels/java-ea && \
+	for v in $(sdk list java|tr -s ' '|grep ' installed '|\
+		cut -d '|' -f 6|tr -d ' '|\
+		sed 's/\(^[^\.-]*\)\(.*\)$/\1,\1\2/'|sort -u -t, -k 1,1|cut -f 1 -d,); do \
+			if [ "$v" -ge "17" ]; then \
+				cp --archive /opt/conda/share/jupyter/kernels/java /opt/conda/share/jupyter/kernels/java-"$v"; \
+			fi ; \
+	done && \
+	mv /opt/conda/share/jupyter/kernels/java /opt/conda/share/jupyter/kernels/java-latest && \
+	java_lts=$(sdk list java|grep default| grep -o "[^ ]*$"|tr -d ':') && \
+	java_latest=$(sdk list java|tr -s ' '|grep -v '.ea.' |\
+		grep "installed"|cut -d '|' -f 6|head -n 1|sed 's/ //g') && \
+	java_ea=$(sdk list java|tr -s ' '|grep -e '.ea.' |\
+		grep "installed"|cut -d '|' -f 6|sort|tail -n 1|sed 's/ //g') && \
+	cp /opt/conda/share/jupyter/kernels/java-latest/kernel.json /opt/conda/share/jupyter/kernels/java-lts/kernel.json && \
+	cp /opt/conda/share/jupyter/kernels/java-latest/kernel.json /opt/conda/share/jupyter/kernels/java-ea/kernel.json && \
+	for v in $(sdk list java|\
+                                tr -s ' '|grep ' tem '|cut -d '|' -f 6|tr -d ' '|\
+                                sed 's/\(^[^\.-]*\)\(.*\)$/\1,\1\2/'|\
+                                sort -u -t, -k 1,1); do \
+									version=$(echo "$v"|cut -f 2 -d,)  && \
+									major_version=$(echo "$v"|cut -f 1 -d,) && \
+									if [ "$major_version" -ge "17" ]; then \
+										cp /opt/conda/share/jupyter/kernels/java-latest/kernel.json \
+											/opt/conda/share/jupyter/kernels/java-"$major_version"/kernel.json && \
+										/tmp/patch_java_kernel.sh "$version" java-"$major_version"; \
+									fi; \
+    done && \
+	/tmp/patch_java_kernel.sh ${java_lts} java-lts && \
+	/tmp/patch_java_kernel.sh ${java_latest} java-latest && \
+	/tmp/patch_java_kernel.sh ${java_ea} java-ea && \ 
+    fix-permissions ${CONDA_DIR} && \
+    fix-permissions /home/${NB_USER}
 
 # Update installed software versions. 
 COPY versions/ /versions/
@@ -190,14 +231,6 @@ RUN touch ${HOME}/README.md && \
       eval "$versionscript" 2>/dev/null >> ${HOME}/README.md ; \
     done
 
-# COPY kernel.json /opt/conda/share/jupyter/kernels/java/kernel.json
-#RUN JAVA_MAJOR_VERSION=$(java --version|head -n 1|cut -d ' ' -f 2|cut -d '.' -f 1) && \
-#	DYNENV="\"env\": {\"JAVA_OPTS\":\"--enable-preview\",\"IJAVA_COMPILER_OPTS\":\"-deprecation -Xlint:preview -XprintProcessorInfo -XprintRounds --add-exports=jdk.compiler\/com.sun.tools.javac.processing=ALL-UNNAMED\"}" && \
-#	IKERNEL_JAR=$(ls /opt/conda/share/jupyter/kernels/java/IJava*.jar| sed 's/\//\\\//g') && \
-#	sed -i "s/ENV/$DYNENV/" /opt/conda/share/jupyter/kernels/java/kernel.json && \
-#	sed -i "s/IKERNEL_JAR/$IKERNEL_JAR/" /opt/conda/share/jupyter/kernels/java/kernel.json
-
-
 USER $NB_UID
-
+COPY settings.xml /home/jovyan/.sdkman/candidates/maven/current/conf/settings.xml
 
